# tiny-aya-water-pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  document.py  pyproject.toml  streamlit_app.py  test_document.py  test_streamlit_app.py  test_streamlit_ui.py  vad.py
docs/superpowers/plans/: 2026-03-24-tiny-aya-water-translator.md  2026-03-26-simplified-ui.md  2026-03-27-guided-flow-ui.md  2026-03-27-ui-tests.md  2026-03-28-friendly-ui.md  2026-03-29-side-by-side-translate.md  2026-03-30-google-translate-ui.md  2026-04-01-document-translation.md  2026-04-02-mlx-model-migration.md  2026-04-12-remove-documents-tab.md
docs/superpowers/specs/: 2026-03-24-tiny-aya-water-translator-design.md  2026-03-25-summarization-design.md  2026-03-27-guided-flow-ui-design.md  2026-03-27-ui-tests-design.md  2026-03-29-side-by-side-translate-design.md  2026-03-30-google-translate-ui-design.md  2026-04-01-document-translation-design.md  2026-04-02-mlx-model-migration-design.md  2026-04-12-remove-documents-tab-design.md
