[project]
name = "tiny-aya-global-pipeline"
version = "0.4.0"
description = "Translate text with the Cohere Labs Tiny Aya Global model on Apple Silicon with MLX."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-lm>=0.28.0",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["."]
